<resources>
    <string name="app_name">MyLists</string>
    <string name="login_header">Login to MyLists</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="create_account_button">CREATE AN ACCOUNT</string>
    <string name="signup_header">Create an account</string>
    <string name="signup_button">SIGN UP</string>
    <string name="logout_button">LOGOUT</string>
    <string name="insert_button">INSERT</string>
    <string name="insert_item">Type Item Description</string>
</resources>
